fixed footer spacing weirdness by making .parent display block, not flex

--- a/assets/stylesheets/core/_layout.scss
+++ b/assets/stylesheets/core/_layout.scss
@@ -146,7 +146,7 @@ a:hover {
 
  footer {
    margin-top: 100px;
-   color: $grey-light;
+   color: $grey;
  }
 
  footer a {
@@ -170,12 +170,13 @@ a:hover {
   }
 
   .parent {
-    flex-flow: column wrap;
+    display: block;
     align-items: start;
   }
 
   footer a {
     font-size: 16px;
+
   }
 
  }
